* SVN *

* Remove title from file upload form.  You must use the asset interface if you want to change a files title.

* Allow ability to apply a tag group to all files in file upload form.

* Improve multi-file upload interface.

* Adding Theme admin.  Restructure theme paths to include site-specific private themes.
  /themes/site-#{id}/current - holds current theme
  /themes/site-#{id}/others/* - private themes
  
  The migration should copy your files over.  Rolling back to version 59 will move them back.

* Add {{ section | link_to_month: '2006-9' }} for linking to archive pages.

* Add {{ '2006-1' | parse_date }} for general date parsing

* Fixed issues previewing article drafts

# Added new liquid vars {{ site.latest_articles }} and {{ site.latest_comments }}, 
  as well as filters like {{ site | latest_articles: 5 }} or {{ site | latest_comments: 5 }}

* move liquid drops/filters to app/drops and app/filters

* add multi-asset uploading capabilities.

* add password resetting ability [Geoff Davis, Rick Olson]

* remove 'pages' and 'comments' variables in page/single template types.  Instead use 'section.pages' and 'article.comments', respectively.

* Find child sections of a section

  {{ 'projects' | child_sections }} # => any sections with a path like projects/*

* Find articles in a section in Liquid

  {{ section | latest_articles }}
  
  {{ 'about' | section | latest_article | assign_to: 'bio' }}
  <div>{{ bio.body }}</div>

* Find section by path in Liquid

  {{ 'about' | section }}

* Support for assigning liquid variables.

  {{ 5 | assign_to: 'age' }} sets age = 5
  {{ site.tags | assign_to 'tags' }} sets tags = site.tags

* Liquid include tag support [Geoff Davis]

  {% include 'foo' %} includes the '_foo.liquid' template.

* Experimental MetaWeblog Support [Corey Donohue, Patrick Lenz]

* Added 'my' option to format_date for use with archive_date

* Added archive_date liquid tag for archive view
