@@ -19,7 +19,13 @@ context "Drop Filters" do
     assert_models_equal [contents(:welcome), contents(:another)], latest_articles(section, 2).collect(&:source)
     assert_equal contents(:welcome), latest_article(section).source
   end
-  
+
+  specify "should find latest comments by section" do
+    section = sections(:home).to_liquid
+    assert_models_equal [contents(:welcome_comment)], latest_comments(section).collect(&:source)
+    assert_models_equal [contents(:welcome_comment)], latest_comments(section, 1).collect(&:source)
+  end
+
   specify "should find latest articles by site" do
     assert_models_equal [contents(:welcome), contents(:about), contents(:site_map), contents(:another)], latest_articles(@site).collect(&:source)
     assert_models_equal [contents(:welcome), contents(:about)], latest_articles(@site, 2).collect(&:source)
