@@ -40,7 +40,7 @@ class SectionDropTest < Test::Unit::TestCase
   end
 end
 
-context "Section Articles" do
+context "Section Contnets" do
   fixtures :sites, :sections, :contents, :assigned_sections
 
   def setup
@@ -49,5 +49,11 @@ context "Section Articles" do
 
   specify "should list articles" do
     assert_models_equal [contents(:welcome), contents(:another)], @section.articles.collect(&:source)
+    assert_models_equal [contents(:welcome)], @section.latest_articles(1).collect(&:source)
+  end
+
+  specify "should list articles" do
+    assert_models_equal [contents(:welcome_comment)], @section.comments.collect(&:source)
+    assert_models_equal [contents(:welcome_comment)], @section.latest_comments(1).collect(&:source)
   end
 end
