@@ -15,6 +15,10 @@ class SectionTest < Test::Unit::TestCase
     end
   end
 
+  def test_should_find_comments_by_section
+    assert_models_equal [contents(:welcome_comment)], sections(:home).find_comments(:limit => 3)
+  end
+
   def test_should_not_allow_nil_path
     assert_valid sections(:home)
     sections(:home).path = nil
